tests/hulk/errors/semantic/call_non_function.hulk
let f = 42 in print(f(3));
